# LFPy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.txt  CITATION.cff  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.txt  additional.rst  build.py  classes.rst  conda_environment.yml  conda_environment_macos.yml  conda_environment_ubuntu.yml  conf.py  environment.yml  environment_macos.yml  environment_ubuntu.yml  four_sphere_convergence_test.py  index.rst  information.rst  make.bat  pyproject.toml  requirements.txt  setup.py
.conda-recipe/: meta.yaml
.github/: CONTRIBUTING.md  copilot-instructions.md
.travisci/: test_script.sh
LFPy/: __init__.py  alias_method.py  alias_method.pyx  cell.py  cellwithelectrode.py  cellwithelectrode.pyx  eegmegcalc.py  electrode.py  electrodethreaded.pyx  inputgenerators.py  lfpcalc.py  lfpcalc.pyx  network.py  pointprocess.py  recextelectrode.py  recextelectrodethreaded.pyx  run_simulation.py  run_simulation.pyx  setup.py  stick.hoc  synapse.py  templatecell.py  testing.py  tools.py  version.py
continuous_integration/: install.sh  test_script.sh
doc/: LFPy-logo.ipynb  additional.rst  classes.rst  conf.py  environment.yml  index.rst  information.rst  requirements.txt  tutorial.rst
doc_rst_files/: Makefile  index.rst
documentation/: .buildinfo  classes.html  genindex.html  index.html  index_old.html  information.html  objects.inv  output.txt  py-modindex.html  search.html  searchindex.js
examples/: L5_single_synaptic_input.py  LFPy-example-01.ipynb  LFPy-example-02.ipynb  LFPy-example-03.ipynb  LFPy-example-04-imem.ipynb  LFPy-example-04.ipynb  LFPy-example-05.ipynb  LFPy-example-06.ipynb  LFPy-example-07.ipynb  LFPy-example-08.ipynb  LFPy-example-09.ipynb  LFPy-example-1.ipynb  LFPy-example-10.ipynb  LFPy-example-11.ipynb  LFPy-example-2.ipynb  LFPy-example-3.ipynb  LFPy-example-4.ipynb  LFPy-example-5.ipynb  LFPy-example-6.ipynb  LFPy-example-7.ipynb  LFPy-example-8.ipynb  active_declarations_example3.hoc  binzegger_connectivity_table.json  create_rotation_file.py  (+33 more)
(+504 files in other folders)
